SF Floor 1 and 2 move

--- a/index.html
+++ b/index.html
@@ -67,24 +67,38 @@
     <label class="primary-branding room-select-title" id="room-select-title">Select conference room</label>
     <select class="primary-branding room-select-menu" id="room-select">
       <option value="">Please choose an option</option>
-      <option value="1">1. King's Landing</option>
-      <option value="2">2. The Magic Box</option>
-      <option value="3">3. Taco Town</option>
-      <option value="4">4. Los Pollos Hermanos</option>
-      <option value="5">5. 221B Baker Street</option>
-      <option value="6">6. The Krusty Krab</option>
-      <option value="7">7. New New York</option>
-      <option value="8">8. Serenity</option>
-      <option value="9">9. Freddy's BBQ Joint</option>
-      <option value="10">10. The Peach Pit</option>
-      <option value="11">11. Paddy's Pub</option>
-      <option value="12">12. The Upside Down</option>
-      <option value="13">13. TARDIS</option>
-      <option value="14">14. Bluth's Original Frozen Banana Stand</option>
-      <option value="15">15. The Batcave</option>
-      <option value="16">16. Cone of Silence</option>
-      <option value="17">17. Hooli</option>
-      <option value="18">18. Wellness</option>
+      <optgroup label="Floor 1">
+        <option value="1">105) Schitt's Creek</option>
+        <option value="2">108) The Good Place</option>
+        <option value="3">109) The 99th Precinct</option>
+        <option value="4">110) JJ's Diner</option>
+        <option value="5">111) Dunder Mifflin</option>
+        <option value="6">112) Aziraphale's Bookshop</option>
+        <option value="7">116) Plinko</option>
+        <option value="8">Booth) The Magic Box</option>
+        <option value="9">Booth) Bates Motel</option>
+        <option value="10">Booth) Anavrin</option>
+      </optgroup>
+      <optgroup label="Floor 2">
+        <option value="11">202) King’s Landing</option>
+        <option value="12">203) Vought International</option>
+        <option value="13">204) Chateau Picard</option>
+        <option value="14">205) Mandalore</option>
+        <option value="15">206) Caprica</option>
+        <option value="16">208) San Junipero</option>
+        <option value="17">209) The Summer Palace</option>
+        <option value="18">220) Kobra Kai</option>
+        <option value="19">221) The Regal Beagle</option>
+        <option value="20">222) Mocha’s Joe</option>
+        <option value="21">223) Monk’s Cafe</option>
+        <option value="22">224a) Hollywoo</option>
+        <option value="23">224b) The Citadel of Rick’s</option>
+        <option value="24">Booth) Gotham</option>
+        <option value="25">Booth) Smallville</option>
+        <option value="26">Booth) The Krusty Krab</option>
+        <option value="27">Booth) Bob's Burgers</option>
+        <option value="28">Booth) TARDIS</option>
+      </optgroup>
     </select>
   </div>
   <script src="https://apis.google.com/js/api.js"></script>
