--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <option value="8">FL1: Booth) The Magic Box</option>
       <option value="9">FL1: Booth) Bates Motel</option>
       <option value="10">FL1: Booth) Anavrin</option>
-      <option value="11">FL2: 202) King’s Landing</option>
+      <!-- <option value="11">FL2: 202) King’s Landing</option>
       <option value="12">FL2: 203) Vought International</option>
       <option value="13">FL2: 204) Chateau Picard</option>
       <option value="14">FL2: 205) Mandalore</option>
@@ -126,7 +126,7 @@
       <option value="25">FL2: Booth) Smallville</option>
       <option value="26">FL2: Booth) The Krusty Krab</option>
       <option value="27">FL2: Booth) Bob's Burgers</option>
-      <option value="28">FL2: Booth) TARDIS</option>
+      <option value="28">FL2: Booth) TARDIS</option> -->
     </select>
   </div>
   <script src="https://apis.google.com/js/api.js"></script>
