--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <label class="primary-branding room-select-title" id="room-select-title">Select conference room</label>
     <select class="primary-branding room-select-menu" id="room-select">
       <option value="">Please choose an option</option>
-      <!-- <optgroup label="Floor 1">
+      <optgroup label="Floor 1">
         <option value="1">105) Schitt's Creek</option>
         <option value="2">108) The Good Place</option>
         <option value="3">109) The 99th Precinct</option>
@@ -98,35 +98,7 @@
         <option value="26">Booth) The Krusty Krab</option>
         <option value="27">Booth) Bob's Burgers</option>
         <option value="28">Booth) TARDIS</option>
-      </optgroup> -->
-      <option value="1">FL1: 105) Schitt's Creek</option>
-      <option value="2">FL1: 108) The Good Place</option>
-      <option value="3">FL1: 109) The 99th Precinct</option>
-      <option value="4">FL1: 110) JJ's Diner</option>
-      <option value="5">FL1: 111) Dunder Mifflin</option>
-      <option value="6">FL1: 112) Aziraphale's Bookshop</option>
-      <option value="7">FL1: 116) Plinko</option>
-      <option value="8">FL1: Booth) The Magic Box</option>
-      <option value="9">FL1: Booth) Bates Motel</option>
-      <option value="10">FL1: Booth) Anavrin</option>
-      <!-- <option value="11">FL2: 202) King’s Landing</option>
-      <option value="12">FL2: 203) Vought International</option>
-      <option value="13">FL2: 204) Chateau Picard</option>
-      <option value="14">FL2: 205) Mandalore</option>
-      <option value="15">FL2: 206) Caprica</option>
-      <option value="16">FL2: 208) San Junipero</option>
-      <option value="17">FL2: 209) The Summer Palace</option>
-      <option value="18">FL2: 220) Kobra Kai</option>
-      <option value="19">FL2: 221) The Regal Beagle</option>
-      <option value="20">FL2: 222) Mocha’s Joe</option>
-      <option value="21">FL2: 223) Monk’s Cafe</option>
-      <option value="22">FL2: 224a) Hollywoo</option>
-      <option value="23">FL2: 224b) The Citadel of Rick’s</option>
-      <option value="24">FL2: Booth) Gotham</option>
-      <option value="25">FL2: Booth) Smallville</option>
-      <option value="26">FL2: Booth) The Krusty Krab</option>
-      <option value="27">FL2: Booth) Bob's Burgers</option>
-      <option value="28">FL2: Booth) TARDIS</option> -->
+      </optgroup>
     </select>
   </div>
   <script src="https://apis.google.com/js/api.js"></script>
